# Project-Management-Thesis

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7c1db4383ec8_modify_the_user_agent_column_and_fix_.py  d2c7a61c5f56_add_refresh_sessions_model.py  d98871ee5a60_create_auth_tables_made_changes.py
app/: main.py
app/api/: router.py
app/api/dependencies/: auth.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  health.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py
app/models/auth/: __init__.py  permission.py  refresh_session.py  role.py  user.py
app/repositories/: refresh_session_repository.py  user_repository.py
app/schemas/: __init__.py
app/schemas/auth/: __init__.py  session.py  token.py  user.py
app/services/: auth_service.py
